docs: 为客户端渲染、GUI、菜单、注册和 Mixin 等模块补充 Javadoc 文档喵~
覆盖 client（事件处理、模型层、实体模型、渲染器、GUI 界面）、common（Jade 联动插件、菜单、槽位、配方书、标签注册）和 mixin 包共 47 个文件。

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>